# dennis

./: CMakeLists.txt  README.md  updateInstallFiles.bat
DennisCore/: CMakeLists.txt  app.cpp  app.h  dennis.cpp  dennis.h  dennis_utils.cpp  dennis_utils.h  interface.h  main.cpp
DennisInstaller/: CMakeLists.txt  DennisCore.exe.h  dennis.rc  main.cpp  resource.h  uninstallDennis.bat.h
lib/: dtspeak.exp  dtspeak.lib
